Exam. Masonry has stuck. Attempt 1. Is not Justifiyng along with Susy and fixed gutters.

--- a/exam/dest/css/style.css
+++ b/exam/dest/css/style.css
@@ -824,7 +824,6 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 
 .ideas .ideas__item {
   margin-top: 9px;
-  max-height: 120px;
   border-radius: 4px;
   position: relative;
   display: -webkit-flex;
@@ -839,20 +838,168 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
   overflow: hidden;
 }
 
-.ideas .ideas__img {
-  max-width: 100%;
+@media (min-width: 768px) {
+  .ideas .ideas__img {
+    position: absolute;
+    width: auto;
+  }
 }
 
 .ideas .ideas__title {
   position: absolute;
   display: block;
-  width: 100%;
   text-align: center;
   font-family: MontserratBold, Arial, sans-serif;
   font-weight: bold;
   font-size: 22px;
   line-height: 40px;
   color: #fff;
+  text-shadow: 0 0 1px #666;
+}
+
+.msnry__item {
+  width: 100%;
+  height: 120px;
+}
+
+@media (min-width: 768px) {
+  .msnry__item {
+    min-height: 310px;
+    width: 31.6%;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+.msnry__item-width2 {
+  width: 100%;
+  float: left;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+@media (min-width: 768px) {
+  .msnry__item-width2 {
+    min-height: 310px;
+    width: 66.66667%;
+    float: left;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+.msnry__gutter {
+  width: 2,6738%;
+}
+
+.page {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-width: 320px;
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: lightpink;
+}
+
+@media (min-width: 320px) {
+  .page {
+    background-color: lightgreen;
+  }
+}
+
+@media (min-width: 768px) {
+  .page {
+    background-color: lightblue;
+  }
+}
+
+@media (min-width: 1440px) {
+  .page {
+    background-color: lightyellow;
+  }
+}
+
+.page__wrapper {
+  max-width: 940px;
+  margin-left: auto;
+  margin-right: auto;
+  min-width: 300px;
+  margin-left: 10px;
+  margin-right: 10px;
+  overflow: hidden;
+}
+
+.page__wrapper:after {
+  content: " ";
+  display: block;
+  clear: both;
+}
+
+head {
+  display: block;
+  position: fixed;
+  right: 10px;
+  top: 10px;
+  z-index: 999;
+  color: #333;
+  background: rgba(255, 255, 255, 0.25);
+}
+
+head:before {
+  content: "|||";
+  display: block;
+  padding: 5px 10px;
+  font-family: sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+head:hover {
+  background: rgba(255, 255, 255, 0.5);
+  color: red;
+}
+
+head:hover ~ .page__wrapper,
+head:hover ~ body .page__wrapper {
+  position: relative;
+}
+
+head:hover ~ .page__wrapper:before,
+head:hover ~ body .page__wrapper:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  content: " ";
+  z-index: 998;
+  background-image: linear-gradient(to right, rgba(102, 102, 255, 0.4), rgba(179, 179, 255, 0.4));
+  background-size: 8.33333%;
+  background-origin: content-box;
+  background-clip: content-box;
+  background-position: left top;
+}
+
+@media (min-width: 768px) {
+  .page__wrapper {
+    min-width: 748px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .page__wrapper {
+    min-width: 940px;
+  }
 }
 
 .partners {
@@ -1390,113 +1537,5 @@ head:hover ~ body .promo .promo__wraper:before {
     margin-top: 10px;
     margin-top: 0px;
     width: 160px;
-  }
-}
-
-.page {
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  min-width: 320px;
-  max-width: 1440px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: lightpink;
-}
-
-@media (min-width: 320px) {
-  .page {
-    background-color: lightgreen;
-  }
-}
-
-@media (min-width: 768px) {
-  .page {
-    background-color: lightblue;
-  }
-}
-
-@media (min-width: 1440px) {
-  .page {
-    background-color: lightyellow;
-  }
-}
-
-.page__wrapper {
-  max-width: 940px;
-  margin-left: auto;
-  margin-right: auto;
-  min-width: 300px;
-  margin-left: 10px;
-  margin-right: 10px;
-  overflow: hidden;
-}
-
-.page__wrapper:after {
-  content: " ";
-  display: block;
-  clear: both;
-}
-
-head {
-  display: block;
-  position: fixed;
-  right: 10px;
-  top: 10px;
-  z-index: 999;
-  color: #333;
-  background: rgba(255, 255, 255, 0.25);
-}
-
-head:before {
-  content: "|||";
-  display: block;
-  padding: 5px 10px;
-  font-family: sans-serif;
-  font-size: 16px;
-  font-weight: bold;
-}
-
-head:hover {
-  background: rgba(255, 255, 255, 0.5);
-  color: red;
-}
-
-head:hover ~ .page__wrapper,
-head:hover ~ body .page__wrapper {
-  position: relative;
-}
-
-head:hover ~ .page__wrapper:before,
-head:hover ~ body .page__wrapper:before {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  content: " ";
-  z-index: 998;
-  background-image: linear-gradient(to right, rgba(102, 102, 255, 0.4), rgba(179, 179, 255, 0.4));
-  background-size: 8.33333%;
-  background-origin: content-box;
-  background-clip: content-box;
-  background-position: left top;
-}
-
-@media (min-width: 768px) {
-  .page__wrapper {
-    min-width: 748px;
-  }
-}
-
-@media (min-width: 1440px) {
-  .page__wrapper {
-    min-width: 940px;
   }
 }
